tests/ui/pattern/slice-patterns-ambiguity.stderr
error[E0282]: type annotations needed for `&_`
  --> $DIR/slice-patterns-ambiguity.rs:25:9
   |
LL |     let &[a, b] = Zeroes.into() else {
   |         ^^^^^^^
   |
help: consider giving this pattern a type, where the placeholders `_` are specified
   |
LL |     let &[a, b]: &_ = Zeroes.into() else {
   |                ++++

error[E0282]: type annotations needed
  --> $DIR/slice-patterns-ambiguity.rs:32:13
   |
LL |     if let &[a, b] = Zeroes.into() {
   |             ^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> $DIR/slice-patterns-ambiguity.rs:39:13
   |
LL |     if let &[a, b] = Zeroes.into() {
   |             ^^^^^^ cannot infer type

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0282`.
